Drink and Layer added

--- a/src/index.html
+++ b/src/index.html
@@ -78,9 +78,10 @@
 
     <section id="gallery" class="gallery">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, minima
-        aperiam accusantium totam dolore nostrum expedita quasi? Odit nam
-        dolorem aut qui esse deleniti delectus, iure unde atque quasi illo?
+        Přijďte si vychutnat šálek vynikající brazilské kávy k nám do Café Lora.
+        Nabízíme posezení v příjemném prostředí domu z období první republiky.
+        Obzvláště v těchto horkých letních dnech oceníte naši široku nabídku
+        domácích limonád a ledových čajů.
       </p>
     </section>
 
