cleaning up code

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
       <p>
         Přijďte si vychutnat šálek vynikající brazilské kávy k nám do Café Lora.
         Nabízíme posezení v příjemném prostředí domu z období první republiky.
-        Obzvláště v těchto horkých letních dnech oceníte naši široku nabídku
+        Obzvláště v těchto horkých letních dnech oceníte naši širokou nabídku
         domácích limonád a ledových čajů.
       </p>
     </section>
